      - Add recognition of usb keyboards behind an usbhid
      - Display AT-keymaps for usb keyboards on i386 and powerpc (prep & chrp)
      - Added some debug output to help trace problems; can be cleaned later
      - Some whitespace cleanup
      This fixes #280122, but for now d-i will still display misleading
      dialogs: "AT keymaps" for USB keyboards.
    - at-kbd.c: minor correction in comments

 -- Frans Pop <aragorn@tiscali.nl>  Mon,  8 Nov 2004 22:53:16 +0100

kbd-chooser (1.06) unstable; urgency=high

  * Frans Pop
    - Fix error in parsing locale to set correct default keymap
      for locales with a modifier or charmap. Closes: #274692
    - Fix logical error in check for charset when determining the
      default keymap
  * Joshua Kwan
    - remove myself from Uploaders
  * Updated translations: 
    - Finnish (fi.po) by Tapio Lehtonen
    - Russian (ru.po) by Yuri Kozlov

 -- Joey Hess <joeyh@debian.org>  Sat,  6 Nov 2004 18:17:51 -0500

kbd-chooser (1.05) unstable; urgency=high

  * Recai Oktas
    - debian/prebaseconfig
      - Workaround for fixing side effects while loading keymaps in
        non Latin-1, non UTF-8 environments, for Turkish, Hebrew,
        Lithuanian, Latvian. Closes: #276752
  * Christian Perrier
    - debian/templates-in
      - File renamed to kbd-chooser.templates-in for better readability
        of merged PO files

 -- Christian Perrier <bubulle@debian.org>  Mon, 18 Oct 2004 23:09:40 +0200

kbd-chooser (1.04) unstable; urgency=low

  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan