@@ -9,9 +9,12 @@ kbd-chooser (1.07) UNRELEASED; urgency=low
       - Some whitespace cleanup
       This fixes #280122, but for now d-i will still display misleading
       dialogs: "AT keymaps" for USB keyboards.
+    - kbd-chooser.c:
+      - Fix checks to see if no-keyboard option should be added
+      - Add functions to avoid double entries in arch selection dialog
     - at-kbd.c: minor correction in comments
 
- -- Frans Pop <aragorn@tiscali.nl>  Mon,  8 Nov 2004 22:53:16 +0100
+ -- Frans Pop <aragorn@tiscali.nl>  Tue,  9 Nov 2004 14:51:49 +0100
 
 kbd-chooser (1.06) unstable; urgency=high
 
